--- a/index.html
+++ b/index.html
@@ -2,9 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>堆糖</title>
+    <link rel="stylesheet" href="style/index.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
 </head>
 <body>
+<header>
+    <div class="orient-center">
+          <a href="javascript:void(0)" class="logo">
+    </a>
+        <div class="category-filter">
+            <div class="title">分类</div>
+            <div class="icon"></div>
+            <div class="cover"></div>
+            <div class="categories">
+                <div class="inner">
+                    <div class="first-menu">
+                        <a href="javascript:void(0)" >首页</a>
+                        <a href="javascript:void(0)" >热门</a>
+                        <a href="javascript:void(0)" class="first-menu-3">良品购</a>
+                    </div>
+                    <div class="secondary-menu">
+                        <div>
+                            <a href="javascript:void(0)" >家具生活</a>
+                            <a href="javascript:void(0)" >美食菜谱</a>
+                            <a href="javascript:void(0)" >手工DIY</a>
+                        </div>
+                        <div>
+                            <a href="javascript:void(0)" >时尚搭配</a>
+                            <a href="javascript:void(0)" >美妆造型</a>
+                            <a href="javascript:void(0)" >婚纱婚礼</a>
+                        </div>
+                        <div>
+                            <a href="javascript:void(0)" >设计</a>
+                            <a href="javascript:void(0)" >古风</a>
+                            <a href="javascript:void(0)" >插画绘画</a>
+                        </div>
+                        <div>
+                            <a href="javascript:void(0)" >壁纸</a>
+                            <a href="javascript:void(0)" >头像</a>
+                            <a href="javascript:void(0)" >文字句子</a>
+                        </div>
+                        <div>
+                            <a href="javascript:void(0)" >旅行</a>
+                            <a href="javascript:void(0)" >摄影</a>
+                            <a href="javascript:void(0)" >人文艺术</a>
+                        </div>
+                        <div>
+                            <a href="javascript:void(0)" >影音书</a>
+                            <a href="javascript:void(0)" >人物明星</a>
+                            <a href="javascript:void(0)" >动漫动画</a>
+                        </div>
+                        <div>
+                            <a href="javascript:void(0)" >植物多肉</a>
+                            <a href="javascript:void(0)" >生活百科</a>
+                            <a href="javascript:void(0)" >搞笑萌宠</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="search-container">
+            <input type="text" title="请输入关键字" placeholder="搜索感兴趣的内容"/>
+            <span></span>
+        </div>
+
+    </div>
+
+
+</header>
+<main class="banner orient-center">
+    <div class="carousel">
+        <div class="image-wrapper">
+            <img src="./images/carousel/20161129145124_VFBGX.thumb.710_443_c.jpeg"/>
+            <img src="./images/carousel/20161129204341_kiQHV.thumb.710_443_c.jpeg"/>
+            <img src="./images/carousel/20161130152210_zBaEx.thumb.710_443_c.jpeg"/>
+            <img src="./images/carousel/20161130175033_N4vYi.thumb.710_443_c.jpeg"/>
+            <img src="./images/carousel/20161201145049_rhKLU.thumb.710_443_c.jpeg"/>
+        </div>
+    </div>
+
+</main>
 
 </body>
 </html>
